--- a/.github/workflows/Portal-app.yml
+++ b/.github/workflows/Portal-app.yml
@@ -48,16 +48,16 @@ jobs:
           gsutil web set -m index.html -e index.html gs://${{env.CloudStorageBucket}}/
           gsutil -h "Cache-Control:public, max-age=60, no-transform" -m rsync -d -r -j js,html,map,css ./build gs://${{env.CloudStorageBucket}}/
 
-  # tag:
-  #   runs-on: ubuntu-latest
-  #   needs: build_and_deploy
-  #   continue-on-error: false
+  tag:
+    runs-on: ubuntu-latest
+    needs: build_and_deploy
+    continue-on-error: false
 
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Bump version and push tag
-  #       uses: anothrNick/github-tag-action@1.36.0
-  #       env:
-  #         # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         WITH_V: true
-  #         RELEASE_BRANCHES: main
+    steps:
+      - uses: actions/checkout@v2
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+          RELEASE_BRANCHES: main
