--- a/App/package.json
+++ b/App/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/roboto": "^4.5.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "sass": "^1.50.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
