Build docker file for backend

--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -1,5 +1,5 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-bullseye-slim AS base
-WORKDIR /app
+WORKDIR /Server
 EXPOSE 5000
 
 ARG ASPNETCORE_ENVIRONMENT
@@ -9,20 +9,20 @@ ENV ASPNETCORE_ENVIRONMENT=$ASPNETCORE_ENVIRONMENT
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0-bullseye-slim AS build
 WORKDIR /src
-COPY ["Server/IBigDataPortal/Portal", ".Server/IBigDataPortal/Portal"]
-RUN dotnet restore "portal/Server/IBigDataPortal/Portal.csproj"
+COPY ["IBigDataPortal/Portal", ".IBigDataPortal/Portal"]
+RUN dotnet restore "IBigDataPortal/Portal.csproj"
 
 # COPY ["Core/", "./Core/"]
 # COPY ["Mobile/modules/", "./Mobile/modules/"]
 # COPY ["Server/Database/", "./Server/Database/"]
 
 WORKDIR /src
-RUN dotnet build "Server/IBigDataPortal/Portal.csproj" -c Release -o /app/build
+RUN dotnet build "IBigDataPortal/Portal.csproj" -c Release -o /Server/build
 
 FROM build AS publish
-RUN dotnet publish "Server/IBigDataPortal/Portal.csproj" -c Release -o /app/publish
+RUN dotnet publish "IBigDataPortal/Portal.csproj" -c Release -o /Server/publish
 
 FROM base AS final
-WORKDIR /app
-COPY --from=publish /app/publish .
+WORKDIR /Server
+COPY --from=publish /Server/publish .
 ENTRYPOINT ["dotnet", "Portal.dll"]
