Build docker file for backend

--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -9,7 +9,7 @@ ENV ASPNETCORE_ENVIRONMENT=$ASPNETCORE_ENVIRONMENT
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0-bullseye-slim AS build
 WORKDIR /src
-COPY ["IBigDataPortal/Portal", ".IBigDataPortal/Portal"]
+COPY ["IBigDataPortal/Portal/", ".IBigDataPortal/Portal/"]
 RUN dotnet restore "IBigDataPortal/Portal/Portal.csproj"
 
 WORKDIR /src
