Build docker file for backend

--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -1,11 +1,8 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-bullseye-slim AS base
-WORKDIR /Server
+WORKDIR /app
 EXPOSE 5000
 
-ARG ASPNETCORE_ENVIRONMENT
-
 ENV ASPNETCORE_URLS=http://+:5000
-ENV ASPNETCORE_ENVIRONMENT=$ASPNETCORE_ENVIRONMENT
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0-bullseye-slim AS build
 WORKDIR /Server
@@ -13,12 +10,12 @@ COPY ["IBigDataPortal/Portal/", ".IBigDataPortal/Portal/"]
 RUN dotnet restore "IBigDataPortal/Portal/Portal.csproj"
 
 WORKDIR /Server
-RUN dotnet build "IBigDataPortal/Portal/Portal.csproj" -c Release -o /Server/build
+RUN dotnet build "IBigDataPortal/Portal/Portal.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "IBigDataPortal/Portal/Portal.csproj" -c Release -o /Server/publish
+RUN dotnet publish "IBigDataPortal/Portal/Portal.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /Server
-COPY --from=publish /Server/publish .
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "Portal.dll"]
