Build docker file for backend

--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -7,6 +7,7 @@ ENV ASPNETCORE_URLS=http://+:5000
 FROM mcr.microsoft.com/dotnet/sdk:6.0-bullseye-slim AS build
 WORKDIR /Server
 COPY ["IBigDataPortal/Portal/", ".IBigDataPortal/Portal/"]
+RUN "ls"
 RUN dotnet restore "IBigDataPortal/Portal/Portal.csproj"
 
 WORKDIR /Server
