--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -5,18 +5,17 @@ EXPOSE 5000
 ENV ASPNETCORE_URLS=http://+:5000
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0-bullseye-slim AS build
-WORKDIR /Server
+WORKDIR /src
 COPY ["IBigDataPortal/Portal/", ".IBigDataPortal/Portal/"]
-RUN "ls"
 RUN dotnet restore "IBigDataPortal/Portal/Portal.csproj"
 
-WORKDIR /Server
+WORKDIR /src
 RUN dotnet build "IBigDataPortal/Portal/Portal.csproj" -c Release -o /app/build
 
 FROM build AS publish
 RUN dotnet publish "IBigDataPortal/Portal/Portal.csproj" -c Release -o /app/publish
 
 FROM base AS final
-WORKDIR /Server
+WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "Portal.dll"]
