--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -7,7 +7,7 @@ ENV ASPNETCORE_URLS=http://+:5000
 FROM mcr.microsoft.com/dotnet/sdk:6.0-bullseye-slim AS build
 WORKDIR /src
 COPY ["IBigDataPortal", ".IBigDataPortal/"]
-RUN dotnet restore "IBigDataPortal/Portal/Portal.csproj"
+RUN dotnet restore "Portal/Portal.csproj"
 
 RUN dotnet build "IBigDataPortal/Portal/Portal.csproj" -c Release -o /app/build
 
