--- a/Server/IBigDataPortal/Portal.Infrastructure/Portal.Infrastructure.csproj
+++ b/Server/IBigDataPortal/Portal.Infrastructure/Portal.Infrastructure.csproj
@@ -21,6 +21,7 @@
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.0.123" />
       <PackageReference Include="MediatR" Version="10.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
 </Project>
