--- a/.github/workflows/Portal-app.yml
+++ b/.github/workflows/Portal-app.yml
@@ -12,7 +12,7 @@ on:
 env:
   # ApiUrl: https://mobile-api-dev-a2pilg7y3a-ew.a.run.app/api
   GCP_PROJECT: engineering-thesis-346319
-  CloudStorageBucket: www.ibigworld-ath.com
+  CloudStorageBucket: ibigworld-ath.com
 
 jobs:
   build_and_deploy:
