--- a/.github/workflows/Portal-api.yml
+++ b/.github/workflows/Portal-api.yml
@@ -85,11 +85,9 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v0
         with:
-          # project_id: ${{ env.GCP_PROJECT }}
-          # service_account_key: ${{ secrets.DEV_GCP_SA_KEY }}
-          # export_default_credentials: true
           project_id: ${{ env.GCP_PROJECT }}
-          credentials_json: ${{ secrets.GCP_SA_SECRET }}
+          service_account_key: ${{ secrets.DEV_GCP_SA_KEY }}
+          export_default_credentials: true
           
       - name: Cloud run deploy
         run: gcloud run deploy portal-api-prod --image eu.gcr.io/${{ env.GCP_PROJECT }}/portal-api-prod --region=europe-west1 --project=${{ env.GCP_PROJECT }} --memory=1024M --max-instances=10 --cpu=2 --timeout=120 --port=5000
