--- a/.github/workflows/Portal-api.yml
+++ b/.github/workflows/Portal-api.yml
@@ -86,7 +86,7 @@ jobs:
         uses: google-github-actions/setup-gcloud@v0
         with:
           project_id: ${{ env.GCP_PROJECT }}
-          service_account_key: ${{ secrets.DEV_GCP_SA_KEY }}
+          service_account_key: ${{ secrets.GCP_SA_SECRET }}
           export_default_credentials: true
           
       - name: Cloud run deploy
