--- a/Server/IBigDataPortal/Dockerfile
+++ b/Server/IBigDataPortal/Dockerfile
@@ -33,4 +33,4 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
 COPY --from=build-env /app/out .
-ENTRYPOINT ["dotnet", "./IBigDataPortal.dll"]
+ENTRYPOINT ["dotnet", "Portal.dll"]
