--- a/Server/IBigDataPortal/Dockerfile
+++ b/Server/IBigDataPortal/Dockerfile
@@ -1,8 +1,6 @@
 # FROM mcr.microsoft.com/dotnet/aspnet:6.0-bullseye-slim AS base
 # WORKDIR /app
-# EXPOSE 5000
 
-# ENV ASPNETCORE_URLS=http://+:5000
 
 # FROM mcr.microsoft.com/dotnet/sdk:6.0-bullseye-slim AS build
 # WORKDIR /src
@@ -21,7 +19,9 @@
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
 WORKDIR /app
+EXPOSE 5000
 
+ENV ASPNETCORE_URLS=http://+:5000
 # Copy everything
 COPY . ./
 # Restore as distinct layers
