--- a/Server/IBigDataPortal/Portal.Domain/Portal.Domain.csproj
+++ b/Server/IBigDataPortal/Portal.Domain/Portal.Domain.csproj
@@ -8,12 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.App" />
       <Reference Include="Microsoft.AspNetCore.Http.Abstractions, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
         <HintPath>..\..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\6.0.2\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
       </Reference>
-      <Reference Include="Microsoft.AspNetCore.Mvc.Core, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
-        <HintPath>..\..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\6.0.2\Microsoft.AspNetCore.Mvc.Core.dll</HintPath>
-      </Reference>
     </ItemGroup>
-
 </Project>
