--- a/.github/workflows/Portal-api.yml
+++ b/.github/workflows/Portal-api.yml
@@ -1,5 +1,3 @@
-# # This is a basic workflow to help you get started with Actions
-
 name: Portal - API
 
 on:
@@ -12,8 +10,6 @@ on:
       - ".github/workflows/Portal-api.yml"
   
 env:
-  AuthenticationType: "Auth0"
-  Origins: "*"
   GCP_PROJECT: engineering-thesis-346319
   
 
@@ -31,12 +27,11 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: microsoft/variable-substitution@v1
-        working-directory: ./Server/IBigDataPortal 
         with:
-          files: "Portal/appsettings.json"
+          files: "Server/IBigDataPortal/Portal/appsettings.json"
         env:
-          ConnectionStrings.SqlDataContext: ${{ secrets.GCP_CONNECTION_STRING }}
-          
+          connectionStrings.SqlConnectionString: ${{ secrets.GCP_CONNECTION_STRING }}
+
       - name: Build the Docker image
         working-directory: ./Server/IBigDataPortal
         run: docker build -f Dockerfile -t eu.gcr.io/${{ env.GCP_PROJECT }}/portal-api-prod . 
