--- a/.github/workflows/Portal-database.yml
+++ b/.github/workflows/Portal-database.yml
@@ -20,6 +20,9 @@ jobs:
           files: "Server/IBigDataPortal/Portal/appsettings.json"
         env:
           connectionStrings.SqlConnectionString: ${{ secrets.GCP_CONNECTION_STRING }}
+                  
+      - name: Read Mobile.Api -> appsettings.json
+        run: "cat Server/IBigDataPortal/Portal/appsettings.json"
 
       - name: Update database
         run: |
