--- a/.github/workflows/Portal-database.yml
+++ b/.github/workflows/Portal-database.yml
@@ -17,8 +17,16 @@ jobs:
     runs-on: ubuntu-latest
     name: Apply database schema
     steps:
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0
+        with:
+          project_id: ${{ env.GCP_PROJECT }}
+          service_account_key: ${{ secrets.GCP_SA_SECRET }}
+          export_default_credentials: true
       - uses: actions/checkout@v2
-      - uses: microsoft/variable-substitution@v1
+
+      - name: Variable substitution
+        uses: microsoft/variable-substitution@v1
         with:
           files: "Server/IBigDataPortal/Portal/appsettings.json"
         env:
@@ -33,15 +41,29 @@ jobs:
           creds: ${{ secrets.GCP_SA_SECRET }}
           instance: engineering-thesis-346319:us-central1:portalsqlserver
  
-      - name: Public IP
-        id: ip
-        uses: haythem/public-ip@v1.2
+      # - name: Public IP
+      #   id: ip
+      #   uses: haythem/public-ip@v1.2
 
-      - name: Print Public IP
-        run: |
-          echo ${{ steps.ip.outputs.ipv4 }}
-          echo ${{ steps.ip.outputs.ipv6 }}
+      # - name: Print Public IP
+      #   run: |
+      #     echo ${{ steps.ip.outputs.ipv4 }}
+      #     echo ${{ steps.ip.outputs.ipv6 }}
 
+      # - name: Run migration
+      #   env:
+      #     TYPEORM_CONNECTION: postgres
+      #     TYPEORM_HOST: 127.0.0.1
+      #     TYPEORM_PORT: 5432
+      #     TYPEORM_USERNAME: user
+      #     TYPEORM_DATABASE: database_name
+      #     TYPEORM_PASSWORD: ${{ secrets.CLOUD_SQL_PASSWORD }}
+      #     TYPEORM_MIGRATIONS: ./migration/**/*.ts
+      #   run: |
+      #     ./cloud_sql_proxy -instances=nice-cb-dev:us-central1:nice-db-dev=tcp:5432 &
+      #     npm run orm:migration:run:staging
+
+      ## There is no IP connection here on GCP maybe Proxy connection? :(
       - name: Update database
         run: |
           dotnet tool install --global dotnet-ef
