--- a/.github/workflows/Portal-database.yml
+++ b/.github/workflows/Portal-database.yml
@@ -35,15 +35,12 @@ jobs:
       - name: Read Mobile.Api -> appsettings.json
         run: "cat Server/IBigDataPortal/Portal/appsettings.json"
 
-      - name: Log in to GCP proxy
-        uses: mattes/gce-cloudsql-proxy-action@v1
-        with:
-          creds: ${{ secrets.GCP_SA_SECRET }}
-          instance: engineering-thesis-346319:us-central1:portalsqlserver
-        run: |
-          dotnet tool install --global dotnet-ef
-          dotnet tool restore
-          dotnet ef database update -s ./Server/IBigDataPortal/Portal -p ./Server/IBigDataPortal/Portal.Database
+      # - name: Log in to GCP proxy
+      #   uses: mattes/gce-cloudsql-proxy-action@v1
+      #   with:
+      #     creds: ${{ secrets.GCP_SA_SECRET }}
+      #     instance: engineering-thesis-346319:us-central1:portalsqlserver
+ 
       # - name: Public IP
       #   id: ip
       #   uses: haythem/public-ip@v1.2
@@ -67,8 +64,11 @@ jobs:
       #     npm run orm:migration:run:staging
 
       ## There is no IP connection here on GCP maybe Proxy connection? :(
-      # - name: Update database
-      #   run: |
-      #     dotnet tool install --global dotnet-ef
-      #     dotnet tool restore
-      #     dotnet ef database update -s ./Server/IBigDataPortal/Portal -p ./Server/IBigDataPortal/Portal.Database
+      
+        run: |
+          wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
+          chmod +x cloud_sql_proxy
+          ./cloud_sql_proxy -instances=engineering-thesis-346319:us-central1:portalsqlserver &
+          dotnet tool install --global dotnet-ef
+          dotnet tool restore
+          dotnet ef database update -s ./Server/IBigDataPortal/Portal -p ./Server/IBigDataPortal/Portal.Database
