--- a/.github/workflows/Portal-database.yml
+++ b/.github/workflows/Portal-database.yml
@@ -64,7 +64,7 @@ jobs:
       #     npm run orm:migration:run:staging
 
       ## There is no IP connection here on GCP maybe Proxy connection? :(
-      
+      - name: Update database
         run: |
           wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
           chmod +x cloud_sql_proxy
