--- a/.github/workflows/Portal-database.yml
+++ b/.github/workflows/Portal-database.yml
@@ -84,6 +84,7 @@ jobs:
         run: |
           dotnet tool install --global dotnet-ef
           dotnet tool restore
+          dotnet build
           dotnet ef database update -s ./Server/IBigDataPortal/Portal -p ./Server/IBigDataPortal/Portal.Database
 
          
