--- a/Server/IBigDataPortal/Portal/appsettings.json
+++ b/Server/IBigDataPortal/Portal/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "connectionStrings": {
-    "SqlConnectionString": "Server=34.133.157.101;Database=portal-database;Uid=migrationsUser;Password=migrationsUser;"
+    "SqlConnectionString": "Server=DESKTOP-PUSJJCS;Database=IBigDataDatabase;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
