--- a/App/package.json
+++ b/App/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.9.0",
     "@fontsource/roboto": "^4.5.5",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -14,14 +15,19 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.0",
     "node-sass": "^7.0.0",
-    "react": "^17.0.2",
+    "react": "^18.1.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.50.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,6 +60,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "yarn-upgrade-all": "^0.7.1"
   }
 }
